--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <button id="connectBtn" onclick="connect()">Connect</button>
     <h1>Stake Usdc</h1>
     <input id="amount" type="number" placeholder="Amount to stake..." required>
-    <button onclick="stake()">Stake</button>
+    <button id="status" onclick="stake()">Stake</button>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.4.1/web3.min.js"></script>
