load staking functions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <input id="amount" type="number" placeholder="Amount to stake..." required>
     <button id="status" onclick="stake()">Stake</button>
     </div>
+    <div class="container">
+    <h1>Claim Reward</h1>
+    <div id="container"></div>
+    <button id="status" onclick="stake()">Stake</button>
+    </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.4.1/web3.min.js"></script>
    
