stakes is now loading

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <button id="status" onclick="stake()">Stake</button>
     </div>
     <div class="container">
-    <h1>Claim Reward</h1>
-    <div id="container"></div>
-    <button id="status" onclick="stake()">Stake</button>
+    <h1>Stakings</h1>
+    <div id="stakeContainer"></div>
+    
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.4.1/web3.min.js"></script>
