--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button id="connectBtn" onclick="connect()">Connect</button>
     <h1>Stake Usdc</h1>
     <input id="amount" type="number" placeholder="Amount to stake..." required>
+    <button id="astatus" onclick="approve()">Approve</button>
     <button id="status" onclick="stake()">Stake</button>
     </div>
     <div class="container">
